--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.3.1",
     "lucide-react": "0.460.0",
     "react-router-dom": "6.28.0",
-    "@google/genai": "^1.33.0"
+    "@google/genai": "^1.33.0",
+    "@supabase/supabase-js": "2.46.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
